tests/semantic_errors/sasha42_3.tl
-- test case 42.
-- Description : undefined function.

-- Expected : '3'
require "ifj21" 
function foo( r : string, a : string ) : nil
    func42()                                
end                                         

